<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YoutubeReader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phone_language">En</string>
    
    <string name="refresh">Refresh</string>
    <string name="accounts">Accounts</string>
    <string name="all_read">Mark All Viewd</string>
    <string name="menu_search">Search</string>
    <string name="setting">Setting</string>
    <string name="menu_send_mail">Contact Us</string>
    <string name="menu_select_all">Select All</string>
    
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_net_connection">No Network</string>
    <string name="retry">Retry</string>
    <string name="all_viewed">All Viewed!</string>
    
    
    <!-- video list -->
    <string name="likes">Likes</string>
    <string name="time">Time</string>
    <string name="views">Views</string>
    <string name="launch_time">Launch</string>
    
    <!-- Youtube Player -->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
	
    <!-- Contexual menu -->
    <string name="play_selected">Play Selected</string>
    <string name="play_all">Play All</string>
    <string name="mark_as_read">Mark Viewed</string>
    
    <string name="not_signed_in">Not signed in</string>
    
    <!-- Setting -->
    <string name="setting_account">Account</string>
    <string name="setting_update_video">Video Update</string>
    <string name="setting_update_time">Update Time Interval</string>
    <string name="setting_update_inform">Update Inform</string>
    <string name="setting_update_inform_yes">Inform</string>
    <string name="setting_update_inform_no">Not Inform</string>
    <string name="setting_select_time">Select Update Time Interval</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">Cancel</string>
    <string name="hours"> Hours</string>
    <string name="every">Every </string>
    <string name="click_to_set_account">Click to Set Youtube Account</string>
    
    <!-- Channel Tab  -->
    <string name="tab_recent">RECENT</string>
    <string name="tab_favorite">FAVORITE</string>
    <string name="tab_list">LISTS</string>
    
    <string name="downloading">Downloading...</string>
    <string name="no_data">No Data Found</string>
    
    <string name="search_hint">Enter Search Text</string>
    
    <!-- MainActivity -->
    <string name="my_subscriptions">My SUBSBRIPTIONS</string>
    <string name="my_lists">MY LISTS</string>
    <string name="add_favorte_list">FAVORITE (YoutubeFeeder)</string>
    <string name="to_log_in">Log In</string>
    <string name="log_in_youtube">Log In Youtube</string>
    <string name="try_as_guest">Try As Guest</string>
    <string name="loading_data">Initializing...</string>
    <string name="no_network">No NetWork Connection...</string>
    <string name="channel_remommend">Recommend Channel</string>
    <string name="channel_manage">Manage Channel</string>
    <string name="channel_more">More Channels</string>
    
    
    <!-- PlayerViewActivity -->
    <string name="intro">INTRO:</string>
    <string name="add_to_favorite_list">+FAVO</string>
    <string name="add_to_list">+LIST</string>
    <string name="share">SHARE</string>
    <string name="to_youtube">YOUTUBE</string>
    <string name="the_play_list">PLAY LISTS</string>
    <string name="auto_play">AUTO PLAY</string>
    <string name="re_play">REPLAY</string>
    <string name="login_first">Need Log In Youtube First!</string>
    
    <!-- SearchActivity -->
    <string name="search_video">Video</string>
    <string name="search_channel">Channel</string>
    
    <!-- ManageChannelsActivity -->
    <string name="menu_unsubscribe">UnSubscribe</string>
    
    <!-- Titles -->
    <string name="title_manage">Manage Channel</string>
    <string name="title_recommend">Recommend Channel</string>
    <string name="title_more">Browse Channels</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Setting</string>
        
    
</resources>