<menu xmlns:android="http://schemas.android.com/apk/res/android">   
   <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:showAsAction="always"
        android:icon="@drawable/icon_search"
        /> 
   <item
        android:id="@+id/menu_all_read"
        android:title="@string/all_read"/>
   <item
        android:id="@+id/menu_select_all"
        android:title="@string/menu_select_all"/> 
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/refresh"/>
   <!--  <item
        android:id="@+id/menu_accounts"
        android:icon="@drawable/ic_mailboxes_accounts"
        android:title="@string/accounts"/> -->
    <item
        android:id="@+id/menu_setting"
        android:title="@string/setting"/>
    <item
        android:id="@+id/menu_email"
        android:title="@string/menu_send_mail"/>
</menu>
