<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
         >
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_account"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            /> 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray"
            >
        </LinearLayout>

        <TextView android:id="@+id/text_current_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kkkkk@gmail.com"
            android:textSize="20dp"    
            android:padding="10dp"
            android:background="@drawable/my_novel_selector"
            />
    </LinearLayout>     
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" 
         >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_update_video"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            /> 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray"
            >
        </LinearLayout>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_update_time"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            /> 
        <Button android:id="@+id/button_notify_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="每3小時"
            android:textSize="20dp"    
            />
         
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_update_inform"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            /> 
  		<RadioGroup
  		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
  		    >
  		    <RadioButton android:id="@+id/radio_notify"
  		        android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/setting_update_inform_yes"
            	android:checked="true"
  		        />
  		    <RadioButton android:id="@+id/radio_unnotify"
  		        android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/setting_update_inform_no"
  		        />
  		</RadioGroup>
    </LinearLayout>

</LinearLayout>
